0.12 - ...
* Fixed installation bug
* Removed fts and cdefs from libcobalt
* Fixed GNUmakefile
* Various small musl-to-glibc adaptions for libcobalt
* Added strlcpy and strlcat
* Remove logwtmp

0.11 - Sep 17 2023
* Removed orphaned binary
* Fixed mk file install location

0.10 - Sep 14 2023
* Removed `news`
* `unicode` and `freq` rewritten without Plan9 libraries
* Reworked `unicode` and `freq` man pages
* Removed all remaining plan9 code
* Removed dead source file from `ls` and fixed symlink reading
* Changed GNUmakefile references of libopenbsd to libcobalt
* Removed forced linking with libcobalt in mk files, which was causing
circular and/or unneccessary linkage
* `doas` is now correctly installed as setuid
* Removed support for static building from mk files
* Libraries built with mk files now always have a symlink without the soname
* Disabled mk files from checking for the crt
* Combined fortunes2 and the offensive variant into the main fortunes lists
* Added additional fortunes
* Added `wisdom` and `shsecret` programs
* `cp` no longer errors when `chmod` fails
* Build fixes

0.9 - Sep 9 2023
* Rename libopenbsd to libcobalt
* Set `cp -r` functionality identical to `cp -R`, allowing symlinks and
special files to be copied properly using more conventional syntax
* Disabled some useless or broken functionality in libcobalt
* Fixed memory corruption in siphash.c
* Removed srandom_deterministic
* Added base64, icdb, radixsort, md5, rmd160, sha1, sha2, sys/tree.h and
readpassphrase to libcobalt
* Cleaned up libcobalt makefile
* Removed dead symbols from openbsd.h
* Fixed build system
* Removed `yacc` in favor of Berkeley YACC
* Added `version` utility
* Ported doas (from OpenDoas) to cbtutils

0.8 - Sep 4 2023
* Added the following new utilities: cp mv arch awk banner basename
cat chroot cmp comm cut date dd diff dirname echo env expr false fold getconf
getopt head hostname indent jot kill ln logger logname m4 mkdir mktemp nl