@@ -5,6 +5,7 @@
 * Various small musl-to-glibc adaptions for libcobalt
 * Added strlcpy and strlcat
 * Remove logwtmp
+* Replaced instances of fgetln with getline
 
 0.11 - Sep 17 2023
 * Removed orphaned binary
